--- a/html/login.html
+++ b/html/login.html
@@ -30,7 +30,7 @@
                                     <h3 class="text-center font-weight-light my-4">Login</h3>
                                 </div>
                                 <div class="card-body">
-                                    <form class="form register">
+                                    <form class="form register" id="form1">
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="inputEmail" type="email"
                                                 placeholder="name@example.com" required />
@@ -66,6 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="../js/scripts.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 
 </html>
