--- a/html/password.html
+++ b/html/password.html
@@ -16,7 +16,7 @@
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
-    
+
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
             <main>
@@ -30,7 +30,7 @@
                                 <div class="card-body">
                                     <div class="small mb-3 text-muted text-center">Enter your email address and we will
                                         send you a link to reset your password.</div>
-                                    <form class="form register">
+                                    <form class="form register" id="form">
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="inputEmail" type="email"
                                                 placeholder="name@example.com" required />
@@ -61,6 +61,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="../js/scripts.js"></script>
+    <script src="../js/register.js"></script>
 </body>
 
 </html>
