--- a/html/register.html
+++ b/html/register.html
@@ -27,7 +27,7 @@
                                 <h3 class="text-center font-weight-light my-4">Create Account</h3>
                             </div>
                             <div class="card-body">
-                                <form class="form register">
+                                <form class="form register" id="form">
                                     <div class="row mb-3">
                                         <div class="col-md-6">
                                             <div class="form-floating mb-3 mb-md-0">
@@ -83,6 +83,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="../js/scripts.js"></script>
+    <script src="../js/register.js"></script>
 </body>
 
 </html>
